syntax = "proto3";
package kratos.api;

option go_package = "anjuke/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password=3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  message TencentYunRealName {
    string secretId = 1;
    string secretKey = 2;
  }
  message AliyunSms {
    string access_key_id = 1;
    string access_key_secret = 2;
  }
  message ShumaiSms {
    string app_code = 1;
  }
  Database database = 1;
  Redis redis = 2;
  Minio minio = 3;
  TencentYunRealName tencent_yun_real_name = 4;
  AliyunSms aliyun_sms = 5;
  ShumaiSms shumai_sms = 6;
}

message Minio {
  string endpoint = 1;
  string access_key = 2;
  string secret_key = 3;
  bool use_ssl = 4;
  string bucket = 5;
}


